[gd_scene load_steps=7 format=3 uid="uid://clwxqo42ap5op"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_8a7xe"]
[ext_resource type="Texture2D" uid="uid://dr50igx46nbot" path="res://assets/Backgrounds/Joseph_Wright_004.jpg" id="1_c3r4i"]
[ext_resource type="Theme" uid="uid://bwe1owntg1ijf" path="res://RootTheme.tres" id="1_s85bj"]
[ext_resource type="AudioStream" uid="uid://caa2jqeuefly2" path="res://assets/audio/Careful_palindromes_(disquiet0344).ogg" id="3_vdl6p"]
[ext_resource type="FontFile" uid="uid://bo4amvjvj1bkm" path="res://assets/Fonts/Avara.ttf" id="5_tsxpq"]
[ext_resource type="PackedScene" uid="uid://boivg2moacq1" path="res://character_creator.tscn" id="6_pkq7a"]

[node name="Root" type="TextureRect" node_paths=PackedStringArray("mainMenu", "characterCreator", "credits", "loadMenu", "saveSelect", "confirm", "settings", "mainVolume", "volumeSlider")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_s85bj")
texture = ExtResource("1_c3r4i")
script = ExtResource("1_8a7xe")
mainMenu = NodePath("Main Menu")
characterCreator = NodePath("Character Creator")
credits = NodePath("credits")
loadMenu = NodePath("CharacterLoad")
saveSelect = NodePath("CharacterLoad/Structure/VBoxContainer/saves")
confirm = NodePath("CharacterLoad/Structure/VBoxContainer/confirmDelete")
settings = NodePath("Settings")
mainVolume = NodePath("Music")
volumeSlider = NodePath("Settings/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Volume")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vdl6p")
parameters/looping = false

[node name="Main Menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Structure" type="VBoxContainer" parent="Main Menu"]
layout_mode = 2

[node name="Spacer" type="VBoxContainer" parent="Main Menu/Structure"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Main Menu/Structure"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_tsxpq")
theme_override_font_sizes/font_size = 50
text = "MadHatter's TTRPG Mini Maker"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu/Structure"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="New Character" type="Button" parent="Main Menu/Structure/VBoxContainer"]
layout_mode = 2
text = "New Character"

[node name="Load Character" type="Button" parent="Main Menu/Structure/VBoxContainer"]
layout_mode = 2
text = "Load Character"

[node name="Settings" type="Button" parent="Main Menu/Structure/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Credits" type="Button" parent="Main Menu/Structure/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="Main Menu/Structure/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Spacer2" type="VBoxContainer" parent="Main Menu/Structure"]
layout_mode = 2
size_flags_vertical = 3

[node name="credits" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="credits"]
layout_mode = 2

[node name="space" type="VBoxContainer" parent="credits/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="credits/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="credits/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Credits:"

[node name="Humanizer" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Humanizer:"

[node name="Humanizer Detailed" type="MarginContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="VBoxContainer" type="VBoxContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Humanizer Detailed"]
layout_mode = 2

[node name="Paetron" type="LinkButton" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Humanizer Detailed/VBoxContainer"]
layout_mode = 2
text = "Project Page"
uri = "https://github.com/NitroxNova/humanizer"

[node name="NitroxNova" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Humanizer Detailed/VBoxContainer"]
layout_mode = 2
text = "NitroxNova
"

[node name="MarginContainer" type="MarginContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Humanizer Detailed/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="VBoxContainer" type="VBoxContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Humanizer Detailed/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Youtube" type="LinkButton" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Humanizer Detailed/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Youtube"
uri = "https://www.youtube.com/@NitroxNova"

[node name="Github" type="LinkButton" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Humanizer Detailed/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Github"
uri = "github.com/NitroxNova"

[node name="Paetron" type="LinkButton" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Humanizer Detailed/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Patreon"
uri = "patreon.com/ReignBowGames"

[node name="Make Human" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Make Human:"

[node name="Make Human2" type="MarginContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="VBoxContainer" type="VBoxContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human2"]
layout_mode = 2

[node name="Project Page" type="LinkButton" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human2/VBoxContainer"]
layout_mode = 2
text = "Project Page"
uri = "http://www.makehumancommunity.org/"

[node name="Project Page2" type="LinkButton" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human2/VBoxContainer"]
layout_mode = 2
text = "Patreon"
uri = "https://www.patreon.com/makehuman"

[node name="Obj export" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "OBJ Export:"

[node name="Make Human3" type="MarginContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="VBoxContainer" type="VBoxContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human3"]
layout_mode = 2

[node name="Project Page" type="LinkButton" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human3/VBoxContainer"]
layout_mode = 2
text = "Project Page"
uri = "https://github.com/fbcosentino/godot-objexporter"

[node name="Obj export2" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Assets:"

[node name="Make Human4" type="MarginContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="VBoxContainer" type="VBoxContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4"]
layout_mode = 2

[node name="Project Page" type="LinkButton" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "Asset Repository"
uri = "https://github.com/fbcosentino/godot-objexporter"

[node name="Autors" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "culturalibre"

[node name="Autors2" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "Elvaerwyn"

[node name="Autors3" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "JALdMIC"

[node name="Autors4" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "titleknown"

[node name="Autors5" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "FreezyChan"

[node name="Autors6" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "grinsegold"

[node name="Autors7" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "Mindfront"

[node name="Autors8" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "MargaretToigo"

[node name="Autors9" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "grinsegold"

[node name="Autors10" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "RehmanPolanski"

[node name="Autors11" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "RehmanPolanski"

[node name="Autors12" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "WDG"

[node name="Autors13" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "Mindfront"

[node name="Autors14" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "MargaretToigo"

[node name="Autors15" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "EWS"

[node name="Autors16" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "frankyaye"

[node name="Autors17" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "kwnet_at"

[node name="Autors18" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "spamrakuen"

[node name="Autors19" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "Aethelraed_Unraed"

[node name="Autors20" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "spamrakuen"

[node name="Autors21" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "learning"

[node name="Autors22" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "Aethelraed_Unraed"

[node name="Autors23" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "grinsegold"

[node name="Autors24" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "Joel Palmius"

[node name="Autors25" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "jujube"

[node name="Autors26" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "Cortu"

[node name="Autors27" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "Elvaerwyn"

[node name="Autors28" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "namuhekam"

[node name="Autors29" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "skalldyrssuppe"

[node name="Autors30" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "punkduck"

[node name="Autors31" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "MaciekG"

[node name="Autors33" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "culturalibre"

[node name="Autors34" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "culturalibre"

[node name="Autors35" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "culturalibre"

[node name="Autors36" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Make Human4/VBoxContainer"]
layout_mode = 2
text = "culturalibre"

[node name="Sound" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="MarginContainer" type="MarginContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="VBoxContainer2" type="VBoxContainer" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Song" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Careful Palindromes"

[node name="Artist" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Mesostic"

[node name="License" type="Label" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Mesostic, CC0, via Wikimedia Commons"

[node name="Project Page" type="LinkButton" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Wiki Commons Link"
uri = "https://commons.wikimedia.org/wiki/File:Careful_palindromes_(disquiet0344).ogg"

[node name="Button" type="Button" parent="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Home"

[node name="space2" type="VBoxContainer" parent="credits/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterLoad" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Structure" type="VBoxContainer" parent="CharacterLoad"]
layout_mode = 2

[node name="Spacer" type="VBoxContainer" parent="CharacterLoad/Structure"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="CharacterLoad/Structure"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "MadHatter's TTRPG Mini Maker"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterLoad/Structure"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="New Character" type="Button" parent="CharacterLoad/Structure/VBoxContainer"]
layout_mode = 2
text = "New Character"

[node name="saves" type="OptionButton" parent="CharacterLoad/Structure/VBoxContainer"]
layout_mode = 2

[node name="Load" type="Button" parent="CharacterLoad/Structure/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="delete" type="Button" parent="CharacterLoad/Structure/VBoxContainer"]
layout_mode = 2
text = "Delete"

[node name="Back" type="Button" parent="CharacterLoad/Structure/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="confirmDelete" type="ConfirmationDialog" parent="CharacterLoad/Structure/VBoxContainer"]
initial_position = 2
max_size = Vector2i(300, 300)
dialog_autowrap = true

[node name="Spacer2" type="VBoxContainer" parent="CharacterLoad/Structure"]
layout_mode = 2
size_flags_vertical = 3

[node name="Settings" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Settings"]
layout_mode = 2

[node name="space" type="VBoxContainer" parent="Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Settings/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Settings"

[node name="Audio" type="Label" parent="Settings/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Volume:"

[node name="Volume" type="HSlider" parent="Settings/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 10.0

[node name="Button" type="Button" parent="Settings/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Home"

[node name="space2" type="VBoxContainer" parent="Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Character Creator" parent="." instance=ExtResource("6_pkq7a")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Main Menu/Structure/VBoxContainer/New Character" to="." method="_on_new_character_pressed"]
[connection signal="pressed" from="Main Menu/Structure/VBoxContainer/Load Character" to="." method="_on_show_load_menu"]
[connection signal="pressed" from="Main Menu/Structure/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Main Menu/Structure/VBoxContainer/Credits" to="." method="_credits_show"]
[connection signal="pressed" from="Main Menu/Structure/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="credits/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Button" to="." method="_main_menu_show"]
[connection signal="pressed" from="CharacterLoad/Structure/VBoxContainer/New Character" to="." method="_on_new_character_pressed"]
[connection signal="pressed" from="CharacterLoad/Structure/VBoxContainer/Load" to="." method="_on_load_character_save"]
[connection signal="pressed" from="CharacterLoad/Structure/VBoxContainer/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="CharacterLoad/Structure/VBoxContainer/Back" to="." method="_main_menu_show"]
[connection signal="confirmed" from="CharacterLoad/Structure/VBoxContainer/confirmDelete" to="." method="_on_confirm_delete_confirmed"]
[connection signal="value_changed" from="Settings/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="Settings/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Button" to="." method="_main_menu_show"]
